SERVER-38690 Mongos should throw write targeting errors during a transaction